# dnd-tracker-zbrk-2

./: .gitignore
.github/workflows/: check.yml  cicd.yml
campaign_service/: main.py  pyproject.toml
character_service/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
character_service/app/config/: settings.py
character_service/app/db/models/: race.py
chat_service/: pyproject.toml
dice_service/: Dockerfile  __init__.py  docker-compose.yml  main.py  prometheus.yml  pyproject.toml
dice_service/app/config/: dependencies.py
dice_service/app/routers/: dice_routes.py
dice_service/app/schemas/: dice_schemas.py
export_service/: main.py  pyproject.toml
hanbook_service/: main.py  pyproject.toml
setting_service/: main.py  pyproject.toml
user_service/: .env  Dockerfile  docker-compose.yml  main.py  pyproject.toml
user_service/app/: user_service.py
user_service/app/config/: dependencies.py  logging.py  settings.py
user_service/app/db/: db_vitals.py
user_service/app/db/models/: user.py
user_service/app/db/repos/: user_repository.py
user_service/app/routes/: user_routes.py
user_service/app/schemas/: user_schemas.py
user_service/app/utils/: security.py
